# zkool2

./: .gitignore  .release-please-manifest.json  404.html  Basic.lean  CHANGELOG.md  CHANGES_1.md  CHANGES_2.md  CHANGES_3.md  CHANGES_4.md  CHANGES_5.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NIX_BUILD.md  QUICKSTART.md  README.md  analysis_options.yaml  android-win.md  android-win.ps1  build-msys2.md  build-msys2.ps1  build-win.md  build-win.ps1  codegen.ps1  distribute_options.yaml  errors.txt  flake.nix  flutter.ps1  flutter_launcher_icons.yaml  flutter_native_splash.yaml  index.html  main.css  notes.html  overview.html  package.json  planning.md  pnpm-lock.yaml  print.html  privacy.md  (+11 more)
.claude/: settings.json
advanced/: recovery.html
android/: build.gradle  gradle.properties
assets/: 02.food-BJyqF4e4.js  404.html-1sAnGloc.js  404.html-66lfvTfn.js  404.html-6fZnR-bR.js  404.html-B0A0I5Hh.js  404.html-B2XmQl1m.js  404.html-B7p1GuJP.js  404.html-B8T5Ozq3.js  404.html-BF9TjI6z.js  404.html-BLhmVENo.js  404.html-BZMyDjCm.js  404.html-Bl40eLNv.js  404.html-BuGN3KxD.js  404.html-Bw8DM9li.js  404.html-Bzd62wg7.js  404.html-CELKzeX4.js  404.html-CMpVvphH.js  404.html-CdAUrRM_.js  404.html-Cjg9fSkd.js  404.html-CkHI4On8.js  404.html-ClRWsqU3.js  404.html-CvSrosLX.js  404.html-CyI9VkT2.js  404.html-CynPSqwR.js  404.html-D5RkusCO.js  404.html-DIMFpP15.js  404.html-DKXnYkLN.js  404.html-DP8Z-vZ9.js  404.html-DPl9VZOK.js  404.html-DQwoX4V6.js  404.html-DRJpH1bY.js  404.html-DY85Ywxe.js  404.html-DdDcNRyS.js  404.html-Dh-kXhbI.js  404.html-DhW7c3Oc.js  404.html-DhjKL-cF.js  404.html-DlwYmSqp.js  404.html-Dx4C1Zgu.js  404.html-DzOEkd1f.js  404.html-Dzr8tPA_.js  (+3458 more)
auto_import/: Cargo.toml  README.md  example.sh
auto_import/src/: main.rs
docs/: README.md  book.toml  notes.md  overview.md
feat/: contacts.md  plugin.md
frost/: dkg.html  mpc.html  overview.html
graphql/: account.html  api.html  balance.html  build.html  graphiql.html  history.html  notifications.html  payments.html  receive.html  sync.html  unconfirmed.html
guide/: account.html  accounts.html  addresses.html  build.html  other.html  pay.html  start.html  sync.html
ios/: export_options.plist
lib/: address_resolver.dart  chart.dart  folder.dart  main.dart  router.dart  router.g.dart  settings.dart  store.dart  store.freezed.dart  store.g.dart  theme_mode.dart  utils.dart  validators.dart  vault.dart
linux/: CMakeLists.txt
manual/: accounts.html  addresses.html  general.html  overview.html  transactions.html
misc/: alpine.dockerfile  app.json  apple.distrib.p12.enc  ci.dockerfile  codesign-ios.sh  codesign-notarize.sh  currency.md  gcp.json.enc  install-certs.sh  ios.mobileprovision.enc  iso.dockerfile  macos.cert.enc  mkcargokit_options.sh  packages.x86_64  profiledef.txt  zebra.conf  zebra.toml  zkool.mobileprovision.enc  zkool.provisionprofile.enc
protocol/: concepts.html
protos/: compact_formats.proto  service.proto
quickstart/: accounts.html  index.html  install.html
recipe/: account.html  coin.html  cold.html  csv.html  database.html  folder.html  iso.html  ledger.html  mempool.html  net.html  pinlock.html  puri.html  restore.html  security.html  sync.html  tor.html
report/: categories.html  chart.html  examples.html  overview.html  price.html
rust/: CLAUDE.md  Cargo.toml  Rocket.toml  build.rs  zkool.toml
rust/.sqlx/: query-6f01bf5dbc095767e941f608528e23b31c41fbd839aadb4c2aec8970b0aafff9.json
rust/src/: account.rs  auth.rs  bip38.rs  budget.rs  cash.z.wallet.sdk.rpc.rs  coin.rs  contacts.rs  db.rs  frb_generated.rs  frost.rs  graphql-cli.rs  io.rs  key.rs  keys.rs  ledger.rs  lib.rs  lwd.rs  memo.rs  mempool.rs  no_ledger.rs  openalias.rs  recover.rs  sync.rs  zebra.rs
rust/src/api/: account.rs  coin.rs  contacts.rs  db.rs  frost.rs  init.rs  issuance.rs  key.rs  ledger.rs  mempool.rs  migrate.rs  mod.rs  network.rs  openalias.rs  pay.rs  plugin.rs  raptor.rs  sapling.rs  simple.rs  sweep.rs  sync.rs  transaction.rs  vault.rs  vote.rs  zsa.rs
rust/src/frost/: db.rs  dkg.rs  dkg2.rs  mod.rs  protocol.rs  sign.rs
rust/src/frost/dkg2/: mail.rs  pkg.rs  protocol.rs
rust/src/graphql/: data.rs  frost.rs  jwt.rs  mod.rs  mutation.rs  query.rs  subs.rs
rust/src/ledger/: builder.rs  error.rs  fvk.rs  hashers.rs  legacy.rs  mock.rs  mod.rs  nano.rs  recover.rs  tests.rs  transport.rs
rust/src/migrate/: mod.rs
rust/src/net/: http.rs  lwd.rs  mod.rs  zebra.rs
rust/src/pay/: error.rs  fee.rs  mod.rs  plan.rs  pool.rs  prepare.rs  select.rs  solve.rs
rust/src/plugin/: db.rs  mod.rs  rhai_api.rs
rust/src/vault/: crypto.rs  dart.rs  mod.rs
rust/src/warp/: decrypter.rs  edge.rs  legacy.rs  mod.rs  orchard.rs  sapling.rs  sync.rs  witnesses.rs
rust/src/warp/sync/: block.rs  builder.rs  header.rs  shielded.rs  transparent.rs
rust/src/warp/sync/shielded/: ironwood.rs  orchard.rs  sapling.rs
rust/tests/: block_311.hex  parse_block_311.rs  parse_shield_tx.rs  shield_tx.hex  test_compact_decrypt.rs  test_orchard_decrypt.rs  zsa_transfer_test.rs
rust_builder/: pubspec.yaml
servers/: .gitignore  README.md  sync.ts
src/: SUMMARY.html  quickstart.html
tech/: bitcoin.html  graph.html  privacy.html  shielding.html
tests/: README.md  pyproject.toml
tests/tests/: conftest.py  dkg.py  test_account_management.py  test_dkg.py  test_frost.py  test_jwt.py  test_reorg.py  test_smoke.py  test_subscriptions.py  test_transactions.py  test_tx_details.py  test_zebra_wallet.py  utils.py
tests/zkool_tests.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
theme/: book.css
tools/: .crates.toml  .crates2.json  test_plugin.zkplugin
vote/: howto.html
zcash-trees/: Cargo.toml
zcash-trees/src/: lib.rs  network.rs  types.rs
zcash-trees/src/warp/: edge.rs  hasher.rs  legacy.rs  mod.rs  witnesses.rs
zcash-warp/: Cargo.toml
zcash-warp/src/: lib.rs  types.rs
zcash-warp/src/warp/: decrypter.rs  edge.rs  legacy.rs  mod.rs  orchard.rs  sapling.rs  sync.rs  witnesses.rs
zcash-warp/src/warp/sync/: shielded.rs
zcash-warp/src/warp/sync/shielded/: orchard.rs  sapling.rs
(+254 files in other folders)
