[workspace]
members = [
    "rust",
]
resolver = "2"

[patch.crates-io]
# -- ZSA support branches --
orchard = { git = "https://github.com/zcash-shielded-assets/orchard.git", rev = "7bc6c6f" }
sapling-crypto = { git = "https://github.com/hhanh00/sapling-crypto", rev = "bf29f9732eeaa417b63982aa8001acb542343b83" }
zcash_note_encryption = { git = "https://github.com/zcash-shielded-assets/zcash_note_encryption", rev = "57d048381d376f71ce6ba753d7876ef04b6e57cb" }

# -- lrz ZSA branch --
pczt = { git = "https://github.com/zcash-shielded-assets/librustzcash", rev = "c98b772d" }
zcash_address = { git = "https://github.com/zcash-shielded-assets/librustzcash", rev = "c98b772d" }
zcash_encoding = { git = "https://github.com/zcash-shielded-assets/librustzcash", rev = "c98b772d" }
zcash_keys = { git = "https://github.com/zcash-shielded-assets/librustzcash", rev = "c98b772d" }
zcash_primitives = { git = "https://github.com/zcash-shielded-assets/librustzcash", rev = "c98b772d" }
zcash_proofs = { git = "https://github.com/zcash-shielded-assets/librustzcash", rev = "c98b772d" }
zcash_protocol = { git = "https://github.com/zcash-shielded-assets/librustzcash", rev = "c98b772d" }
zcash_transparent = { git = "https://github.com/zcash-shielded-assets/librustzcash", rev = "c98b772d" }
zip321 = { git = "https://github.com/zcash-shielded-assets/librustzcash", rev = "c98b772d" }

# -- remaining transitive deps --
reddsa = { git = "https://github.com/ZcashFoundation/reddsa.git", rev = "975f9ca835c4b9196c81608e55192b0f711e951d" }
sinsemilla = { git = "https://github.com/zcash/sinsemilla", rev = "aabb707e862bc3d7b803c77d14e5a771bcee3e8c" }
zcash_spec = { git = "https://github.com/zcash-shielded-assets/zcash_spec", rev = "d5e84264d2ad0646b587a837f4e2424ca64d3a05" }
halo2_gadgets = { git = "https://github.com/zcash-shielded-assets/halo2", rev = "d687ce0e3e913549cab370ec66765e6d59d4612f" }
halo2_proofs = { git = "https://github.com/zcash-shielded-assets/halo2", rev = "d687ce0e3e913549cab370ec66765e6d59d4612f" }
halo2_poseidon = { git = "https://github.com/zcash-shielded-assets/halo2", rev = "d687ce0e3e913549cab370ec66765e6d59d4612f" }
