[package]
edition = "2021"
name = "rlz"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

anyhow = "1.0.97"
bip39 = "2.1.0"
env_logger = "0.10"
hex = "0.4"
log = "0.4"
rand = "0.6"
rand_core = "0.6"
thiserror = "2.0"

futures = "0.3"
sqlx = {version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"]}
tokio = {version = "1", features = ["rt", "rt-multi-thread", "macros"]}
tokio-util = "0.7"
tokio-stream = "0.1"
reqwest = {version = "0.12", features = ["json", "rustls-tls"]}
serde = "1.0"
serde_json = "1.0"

arti-client = {version = "0.31", features = ["tokio", "native-tls", "onion-service-client"]}
tor-rtcompat = {version = "0.31", features = ["tokio", "native-tls"]}
hyper-util = {version = "0.1", features = ["tokio"]}
tower = "0.5"
rayon = "1.10"

zcash_address = "0.9"
zcash_encoding = "0.3"
zcash_keys = {version = "0.10", features = ["sapling", "orchard", "transparent-inputs"]}
zcash_note_encryption = "0.4"
zcash_primitives = {version = "0.24", features = ["transparent-inputs"]}
zcash_proofs = {version = "0.24", features = ["bundled-prover"]}
zcash_protocol = {version = "0.6", features = ["local-consensus"]}
zcash_transparent = {version = "0.4", features = ["transparent-inputs"]}
pczt = { version = "0.3", features = ["zcp-builder", "io-finalizer", "prover", "signer", "spend-finalizer", "tx-extractor", "transparent", "sapling", "orchard"] }
orchard = {version = "0.11", features = ["unstable-frost"]}
zip321 = "0.5"

reddsa = {git="https://github.com/ZcashFoundation/reddsa.git", rev="975f9ca835c4b9196c81608e55192b0f711e951d", features=["frost"]}
frost-rerandomized = "2.1.0"

bincode = {version = "2.0", features = ["serde"]}
byteorder = "1.5"
#postcard = "1.1"
bip32 = {version = "0.6.0-pre.1", default-features = false}
blake2b_simd = "1.0"
bs58 = "0.5"
chacha20 = "0.9"
fpdec = "0.11"
halo2_gadgets = "0.3"
halo2_proofs = "0.3"
group = "0.13"
jubjub = "0.10"
prost = "0.13.5"
ripemd = "0.1"
rustls = {version = "0.23", default-features = false, features = ["ring"]}
sapling-crypto = "0.5"
secp256k1 = "0.29"
sha2 = "0.10"
tonic = {version = "0.13.0", features = ["tls-webpki-roots"]}

itertools = "0.14"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "json"]}

flate2 = "1.1"
orion = "0.17"

libsqlite3-sys = { version = "0.30", features = ["bundled-sqlcipher-vendored-openssl"] }

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(frb_expand)']}

[dev-dependencies]
chrono = "0.4"
rand = "0.6"

[build-dependencies]
tonic-build = "0.13"

[patch.crates-io]
orchard = { git = "https://github.com/hhanh00/orchard.git", rev = "c06fec6d69c7e6d9619273d8217bf600832a1e66" }

zcash_address = { git = "https://github.com/zcash/librustzcash.git", rev = "5fe0e5234d6e8d0cee38ccc0dff6f32135aabedd" }
zcash_encoding = { git = "https://github.com/zcash/librustzcash.git", rev = "5fe0e5234d6e8d0cee38ccc0dff6f32135aabedd" }
zcash_keys = { git = "https://github.com/zcash/librustzcash.git", rev = "5fe0e5234d6e8d0cee38ccc0dff6f32135aabedd" }
zcash_note_encryption = { git = "https://github.com/zcash/zcash_note_encryption.git", rev = "ede44ea608e667c78309c598fbf4d70f69c15c29" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "5fe0e5234d6e8d0cee38ccc0dff6f32135aabedd" }
zcash_proofs = { git = "https://github.com/zcash/librustzcash.git", rev = "5fe0e5234d6e8d0cee38ccc0dff6f32135aabedd" }
zcash_protocol = { git = "https://github.com/zcash/librustzcash.git", rev = "5fe0e5234d6e8d0cee38ccc0dff6f32135aabedd" }
zcash_transparent = { git = "https://github.com/zcash/librustzcash.git", rev = "5fe0e5234d6e8d0cee38ccc0dff6f32135aabedd" }
pczt = { git = "https://github.com/zcash/librustzcash.git", rev = "5fe0e5234d6e8d0cee38ccc0dff6f32135aabedd" }
zip321 = { git = "https://github.com/zcash/librustzcash.git", rev = "5fe0e5234d6e8d0cee38ccc0dff6f32135aabedd" }
sapling-crypto = { git = "https://github.com/zcash/sapling-crypto.git", rev = "6a8282be0959b410a0b622cd5eb84f8c3c134078" }
