[package]
edition = "2021"
name = "rlz"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "zkool_graphql"
path = "src/graphql-cli.rs"
required-features = ["graphql"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

anyhow = "1.0.97"
bip39 = "2.1.0"
env_logger = "0.10"
hex = "0.4"
log = "0.4"
rand = "0.6"
rand_core = "0.6"
thiserror = "2.0"

hmac = "0.12"

csv-async = "1.3.1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_with = {version = "3.14.1", features = ["hex"]}
sqlx = {version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"]}
tokio = {version = "1", features = ["full"]}
tokio-rustls = "0.26"
tokio-stream = "0.1"
tokio-util = "0.7"
webpki-roots = "1.0.2"

arti-client = {version = "0.31", features = ["tokio", "native-tls", "onion-service-client"]}
httparse = "1.10.1"
hyper-util = {version = "0.1", features = ["tokio"]}
rayon = "1.10"
reqwest = {version = "0.12", features = ["json", "rustls-tls"]}
tor-rtcompat = {version = "0.31", features = ["tokio", "native-tls"]}
tower = "0.5"

qrcode = "0.14.1"
raptorq = "2.0.0"

orchard = {version = "0.11", features = ["unstable-frost"]}
pczt = {version = "0.5", features = ["zcp-builder", "io-finalizer", "prover", "signer", "spend-finalizer", "tx-extractor", "transparent", "sapling", "orchard"]}
zcash_address = "0.10"
zcash_encoding = "0.3"
zcash_keys = {version = "0.12", features = ["sapling", "orchard", "transparent-inputs"]}
zcash_note_encryption = "0.4"
zcash_primitives = {version = "0.26", features = ["transparent-inputs"]}
zcash_proofs = {version = "0.26", features = ["bundled-prover"]}
zcash_protocol = {version = "0.7", features = ["local-consensus"]}
zcash_script = "0.4"
zcash_transparent = {version = "0.6", features = ["transparent-inputs"]}
zip321 = "0.6"

frost-rerandomized = "2.1.0"
incrementalmerkletree = "0.8"
reddsa = {git = "https://github.com/ZcashFoundation/reddsa.git", rev = "975f9ca835c4b9196c81608e55192b0f711e951d", features = ["frost"]}
redjubjub = "0.8"

bincode = {version = "2.0", features = ["serde"]}
byteorder = "1.5"
#postcard = "1.1"
bech32 = "0.11"
bip32 = {version = "0.6.0-pre.1", default-features = false}
blake2b_simd = "1.0"
bs58 = "0.5"
chacha20 = "0.9"
fpdec = "0.11"
group = "0.13"
halo2_gadgets = "0.3"
halo2_proofs = "0.3"
jubjub = "0.10"
prost = "0.13.5"
ripemd = "0.1"
rustls = {version = "0.23", default-features = false, features = ["ring"]}
sapling-crypto = "0.5"
secp256k1 = "0.29"
sha2 = "0.10"
tonic = {version = "0.13.0", features = ["tls-webpki-roots"]}
zip32 = "0.2"

itertools = "0.14"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "json"]}

age = "0.11.1"
zstd = "0.13.3"

cfg-if = "1.0.3"
ledger-transport = "0.10.0"
libsqlite3-sys = {version = "0.30", features = ["bundled-sqlcipher-vendored-openssl"]}

juniper = {version = "0.17", optional = true, features = ["bigdecimal", "chrono"]}
juniper_warp = {version = "0.9", optional = true, features = ["subscriptions"]}
juniper_hyper = {version = "0.10", optional = true}
warp = {version = "0.4", optional = true, features = ["server", "websocket"]}
bigdecimal = {version = "0.4", optional = true}
chrono = {version = "0.4", optional = true}
figment = {version = "0.10", optional = true}

[target.'cfg(target_os = "macos")'.dependencies]
hidapi = "2.6.3"
ledger-transport-zemu = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = {version = "2.6.3", default-features = false, features = ["linux-native"]}

[target.'cfg(target_os = "windows")'.dependencies]
hidapi = {version = "2.6.3", default-features = false, features = ["windows-native"]}

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(frb_expand)']}

[dev-dependencies]
chrono = "0.4"
rand = "0.6"

[build-dependencies]
tonic-build = "0.13"

[features]
graphql = ["juniper", "juniper_warp", "bigdecimal", "chrono", "figment"]
zemu = []

[patch.crates-io]
orchard = {git = "https://github.com/hhanh00/orchard.git", rev = "c06fec6d69c7e6d9619273d8217bf600832a1e66"}

zcash_note_encryption = {git = "https://github.com/zcash/zcash_note_encryption.git", rev = "ede44ea608e667c78309c598fbf4d70f69c15c29"}

pczt = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
sapling-crypto = {git = "https://github.com/zcash/sapling-crypto.git", rev = "0475817b60fced17ec59b0c9412d2b2d29ef529f"}
zcash_address = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_encoding = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_keys = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_primitives = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_proofs = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_protocol = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zcash_transparent = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}
zip321 = {git = "https://github.com/hhanh00/librustzcash.git", rev = "27c170eee23d51cc2d5ee1bf161a12042fd387a1"}

# sapling-crypto = { path = "../../sapling-crypto" }
# zcash_address = { path = "../../librustzcash/components/zcash_address" }
# zcash_encoding = { path = "../../librustzcash/components/zcash_encoding" }
# zcash_keys = { path = "../../librustzcash/zcash_keys" }
# zcash_primitives = { path = "../../librustzcash/zcash_primitives" }
# zcash_proofs = { path = "../../librustzcash/zcash_proofs" }
# zcash_protocol = { path = "../../librustzcash/components/zcash_protocol" }
# zcash_transparent = { path = "../../librustzcash/zcash_transparent" }
# pczt = { path = "../../librustzcash/pczt" }
# zip321 = { path = "../../librustzcash/components/zip321" }
