[package]
edition = "2021"
name = "zcash-trees"
version = "0.1.0"

[lib]
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
hex = "0.4"
rayon = "1.10"
thiserror = "2.0"

bincode = {version = "2.0", features = ["serde"]}
blake2b_simd = "1.0"
chacha20 = "0.9"
halo2_gadgets = "0.3"
halo2_proofs = "0.3"
jubjub = "0.10"
secp256k1 = "0.29"
zip32 = "0.2"

orchard = {version = "0.11", features = ["unstable-frost"]}
sapling-crypto = "0.5"
zcash_encoding = "0.3"
zcash_protocol = {version = "0.7", features = ["local-consensus"]}
zcash_transparent = {version = "0.6", features = ["transparent-inputs"]}

incrementalmerkletree = {version = "0.8", optional = true}

[features]
imt = ["dep:incrementalmerkletree"]
